- fixed layout of ScoreAddPlayer on mobile

--- a/src/app/score/score-add/score-add-player/score-add-player.component.scss
+++ b/src/app/score/score-add/score-add-player/score-add-player.component.scss
@@ -1,4 +1,4 @@
 .url-preview {
-  grid-column: span 2;
+  grid-column: 1/-1;
   max-width: 500px;
 }
